--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,8 @@
 @import url("/styles/landing.css");
 @import url("/styles/client.css");
 @import url("/styles/projects.css");
+@import url("/styles/testimonial.css");
+@import url("/styles/services.css");
 
 
 h1 {
@@ -14,7 +16,7 @@ h3 {
     line-height: 46px;
 }
 
-/* recent projects */
+/* recent projects y our services */
 h4 { 
     font-size: 24px;
     line-height: 28px;
