--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,8 @@
 @import url("/styles/projects.css");
 @import url("/styles/testimonial.css");
 @import url("/styles/services.css");
-
+@import url("/styles/yellowArea.css");
+@import url("/styles/footer.css");
 
 h1 {
     font-size: 60px;
