--- a/styles/testimonial.css
+++ b/styles/testimonial.css
@@ -9,4 +9,108 @@
     height: 622px;
     width: 1320px;
     background-color: #292E47;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.memojis {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 1185px;
+    height: 498px;
+}
+
+.memojis img{
+    width: 150px;
+    height: 150px;
+}
+
+.memoji1 {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+}
+
+.memoji2{
+    position: absolute;
+    left: 87%;
+    bottom: 69%;
+}
+
+.memoji3{
+    position: absolute;
+    right: 87%;
+    top: 69%;
+}
+
+.memoji4{
+    position: absolute;
+    left: 87%;
+    top: 69%;
+}
+
+.memojisTextContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 382px;
+    width: 1100px;
+}
+
+.memojisTextContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 660px;
+    height: 382px;
+}
+
+.memojisTextContent img{
+    border-radius: 50%;
+}
+
+.circle{
+    color: #FFC600;
+    font-weight: bold;
+    text-align: center;
+}
+
+.profilePic {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 171px;
+    height: 50px;
+}
+
+.profilePic img{
+    width: 50px;
+    height: 50px;
+}
+
+.profileText{
+    width: 117px;
+}
+
+.profileText p{
+    line-height: 5px;
+    text-align: left;
+    padding-left: 10px;
+}
+
+.nombre {
+    font-size: 17px;
+    color: #A2D6F9;
+    width: 120px;
+}
+
+.booking{
+    font-size: 13px;
+    color: #F4F6FC; 
 }
