--- a/styles/landing.css
+++ b/styles/landing.css
@@ -21,6 +21,7 @@
 }
 
 .landingLeft p {
+    color: #6B708D;
     width: 435px;
 }
 
@@ -31,7 +32,6 @@
     height: 52px;
     border: none;
     padding: 15px, 36px, 15px, 36px;
-    
 }
 
 .botonIncolor {
@@ -40,6 +40,7 @@
     height: 52px;
     border: none;
     padding: 15px, 36px, 15px, 36px;
+    color: #6B708D;
 }
 
 
@@ -67,7 +68,6 @@
     position: absolute;
     top: 70%;
     left: 60%;
-
 }
 
 
