--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -4,6 +4,10 @@ justify-content: center;
 width: 1440px;
 }
 
+nav a{
+    color: #6B708D;
+}
+
 .navContainer {
     margin-top: 70px;
     width: 1100px;
@@ -30,10 +34,12 @@ width: 1440px;
 
 .navRight button{
     background: #072AC8;
-    color: white;
     width: 150px;
     height: 52px;
     border: none;
-    padding: 15px, 36px, 15px, 36px;
-    
+    padding: 15px, 36px, 15px, 36px; 
+}
+
+.navRight a{
+    color: white !important;
 }
