html y css acabados. falta responsive y js

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@
 @import url("/styles/newsletter.css");
 @import url("/styles/footer.css");
 @import url("/styles/simplify.css");
+@import url("/styles/contacto.css");
 
 h1 {
     color: #292E47;
