--- a/styles/comun/footer.css
+++ b/styles/comun/footer.css
@@ -3,14 +3,13 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 1440px;
-    height: 242px;
+    width: 100%;
+    height: 40vh;
     }
     
 .footerContainer {
-    width: 1100px;
-    padding: 20px;
-    height: 112px;
+    width: 76.39%;
+    height: 40%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -18,7 +17,8 @@ footer {
 }
 
 .footerRight {
-    width: 435px;
+    width: 38%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -31,8 +31,7 @@ footer {
 
 .footerColumn {
     width: auto;
-    height: 112px;
-    gap: 60px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -40,8 +39,8 @@ footer {
 }
 
 .footerLeft{
-    width: 260px;
-    height: 112px;
+    width: 22%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -49,11 +48,10 @@ footer {
 .footerLeft img{
     height: 30px;
     width: 98px;
-    padding-left: 15px;
 }
 
 .footerLeft p{
     font-size: 17px;
     color: #6B708D;
-
+    padding-left: 0px;
 }
