--- a/styles/comun/navbar.css
+++ b/styles/comun/navbar.css
@@ -1,7 +1,7 @@
 nav {
-display: flex;
-justify-content: center;
-width: 1440px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 nav a{
@@ -10,7 +10,7 @@ nav a{
 
 .navContainer {
     margin-top: 70px;
-    width: 1100px;
+    width: 76.39%;
     padding: 20px;
     height: 52px;
     display: flex;
