--- a/styles/comun/newsletter.css
+++ b/styles/comun/newsletter.css
@@ -2,8 +2,8 @@
     margin-top: 200px;
     display: flex;
     justify-content: center;
-    width: 1440px;
-    height: 500px;
+    width: 100%;
+    height: 80vh;
 }
 
 .newsLetter h3{
@@ -16,8 +16,8 @@
 }
 
 .yellowAreaContainer {
-    height: 500;
-    width: 1320px;
+    height: 100%;
+    width: 76.39%;
     background-color: #FFC600;
     display: flex;
     justify-content: center;
@@ -29,8 +29,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1100px;
-    height: 227px;
+    width: 83%;
+    height: 40%;
 }
 
 .yellowAreaText h3, p {
@@ -42,23 +42,26 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 10px;
+    justify-content: space-between;
+    gap: 5%;
     font-size: 17px;
+    width: 70%;
+    height: 35%;
 }
 
 .yellowBotones button {
     background: #072AC8;
     color: white;
-    width: 198px;
-    height: 80px;
+    width: 35%;
+    height: 100%;
     border: none;
     padding: 15px, 36px, 15px, 36px;
 }
 
 .yellowBotones input{
-    padding-left: 10px;
-    width: 393px;
-    height: 80px;
+    padding-left: 50px;
+    width: 100%;
+    height: 100%;
     border: none;
 } 
 
@@ -67,12 +70,14 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    width: 60%;
+    height: 100%;
 }
 .espacioEmail img {
     position: absolute;
     width: 30px;
     height: 30px;
+    left: 20px;
 }
 
 
