--- a/styles/index/client.css
+++ b/styles/index/client.css
@@ -1,9 +1,7 @@
 .client {
-    height: 96px;
-    width: 1440px;
     display: flex;
     justify-content: center;
-    width: 1440px;
+    width: 100%;
     margin-top: 200px;
 }
 
@@ -12,6 +10,5 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    width: 1100px;
-    gap: 60px;
+    width: 76.39%;
 }
