--- a/styles/index/landing.css
+++ b/styles/index/landing.css
@@ -1,15 +1,15 @@
 
 .landing {
     margin-top: 100px;
-    height: 650px;
-    width: 1440px;
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
 .landingContainer {
-    width: 1100px;
+    width: 76.39%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -17,15 +17,17 @@
 }
 
 .landingLeft {
-    width: 530px;
+    width: 50%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;    
 }
 
 
 .landingLeft p {
     color: #6B708D;
     width: 435px;
+    padding-left: 0px;
+    
 }
 
 .landingLeftBoton {
@@ -51,16 +53,16 @@
 
 
 .landingRight {
-    width: 570px;
+    width: 50%;
     height: 650px;
+    position: relative;
 }
 
 .landingRightFotoGrande {
     background-image: url("/project-assets/hero-section/hero-image.png");
     background-size: cover;
-    position: relative;
-    height:inherit;
-    width: inherit;
+    height: 100%;
+    width: 100%;
 }
 
 
