--- a/styles/index/projects.css
+++ b/styles/index/projects.css
@@ -2,7 +2,8 @@
     margin-top: 200px;
     display: flex;
     justify-content: center;
-    width: 1440px;
+    width: 100%;
+    height: 100vh;
 }
 
 .projects p {
@@ -19,25 +20,25 @@
 
 
 .recentProjects {
-    width: 1100px;
+    width: 76.39%;
+    height: 76.92%;
 }
 
 .projectRow {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    gap: 60px;
+    gap: 5%;
 }
 
 .projectRow img{
-    height: 240px;
-    width: 340px;
+    height: 50%;
+    width: 100%;
 }
 
 .projectColumn {
     background-color: white;
-    height: 444px;
-    width: 340px;
+    width: 30%;
 }
 
 
