--- a/styles/index/services.css
+++ b/styles/index/services.css
@@ -1,7 +1,8 @@
 .services {
     display: flex;
     justify-content: center;
-    width: 1440px;
+    width: 100%;
+    height: 80vh;
     margin-top: 200px;
 }
 
@@ -18,14 +19,17 @@
 
 
 .ourServices {
-    width: 1100px;
+    width: 76.39%;
+    height: 100%;
 }
 
 .servicesRow {
+    width: 100%;
+    height: 66%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    gap: 60px;
+    justify-content: space-between;
+    gap: 5%;
 }
 
 .servicesRow .fondo {
@@ -50,8 +54,8 @@
 
 .servicesColumn {
     background-color: white;
-    height: 380px;
-    width: 340px;
+    height: 100%;
+    width: 30%;
     word-wrap: break-word;
     display: flex;
     flex-direction: column;
