--- a/styles/index/testimonial.css
+++ b/styles/index/testimonial.css
@@ -2,12 +2,14 @@
     margin-top: 200px;
     display: flex;
     justify-content: center;
-    width: 1440px;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .testimonialContainer {
-    height: 622px;
-    width: 1320px;
+    height: 83.38%;
+    width: 91.67%;
     background-color: #292E47;
     position: relative;
     display: flex;
@@ -20,8 +22,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    width: 1185px;
-    height: 498px;
+    width: 89.77%;
+    height: 80%;
 }
 
 .memojis img{
@@ -57,8 +59,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 382px;
-    width: 1100px;
+    height: 76.71%;
+    width: 92.83%;
 }
 
 .memojisTextContent {
@@ -66,8 +68,8 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 660px;
-    height: 382px;
+    width: 60%;
+    height: 100%;
 }
 
 .memojisTextContent img{
