--- a/styles/contact/contacto.css
+++ b/styles/contact/contacto.css
@@ -73,3 +73,16 @@
     border: none;
     width: 1104px;
 }
+
+
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+  
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+  
+}
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+     
+}
