--- a/styles/index/client.css
+++ b/styles/index/client.css
@@ -3,6 +3,7 @@
     justify-content: center;
     width: 100%;
     margin-top: 200px;
+    background-color: red;
 }
 
 .clientLogos {
@@ -11,4 +12,28 @@
     justify-content: space-between;
     align-items: center;
     width: 76.39%;
+    background-color: yellow;
+}
+
+
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+/* no necesita */
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+    .client {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 50vh;
+    }
+    
+    .clientLogos {
+        flex-direction: column;
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+  /* no necesita */
 }
