--- a/styles/index/projects.css
+++ b/styles/index/projects.css
@@ -4,6 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
+    background-color: red;
 }
 
 .projects p {
@@ -22,6 +23,7 @@
 .recentProjects {
     width: 76.39%;
     height: 76.92%;
+    background-color: green;
 }
 
 .projectRow {
@@ -29,6 +31,7 @@
     flex-direction: row;
     justify-content: space-around;
     gap: 5%;
+    background-color: yellow;
 }
 
 .projectRow img{
@@ -39,7 +42,58 @@
 .projectColumn {
     background-color: white;
     width: 30%;
+    background-color: pink;
 }
 
 
 
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+    
+    .projects {
+        height: 100vh;
+    }
+    
+    .recentProjects {
+        width: 100%;
+    }
+    
+    .projectRow {
+        height: 70%;
+    }
+
+    
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+  
+    .projects {
+        height: 340vh;
+    }
+
+    .recentProjects {
+        height: 90%;
+    }
+    
+    .projectRow {
+        height: 90%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .projectColumn {
+        height: 50%;
+        width: 70%;
+        justify-content: center;
+    }
+}
+
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+     
+    .projectColumn {
+        height: 50%;
+        width: 80%;
+        justify-content: center;
+    }
+}
