--- a/styles/index/services.css
+++ b/styles/index/services.css
@@ -69,3 +69,15 @@
 
 
 
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+  
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+  
+}
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+     
+}
+
