--- a/styles/index/testimonial.css
+++ b/styles/index/testimonial.css
@@ -39,20 +39,20 @@
 
 .memoji2{
     position: absolute;
-    left: 87%;
-    bottom: 69%;
+    right: 0%;
+    top: 0%;
 }
 
 .memoji3{
     position: absolute;
-    right: 87%;
-    top: 69%;
+    left: 0%;
+    bottom: 0%;
 }
 
 .memoji4{
     position: absolute;
-    left: 87%;
-    top: 69%;
+    right: 0%;
+    bottom: 0%;
 }
 
 .memojisTextContainer{
@@ -68,6 +68,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
     width: 60%;
     height: 100%;
 }
@@ -115,4 +116,71 @@
 .booking{
     font-size: 13px;
     color: #F4F6FC; 
+}
+
+
+
+
+
+
+
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+  
+    .testimonialContainer {
+        width: 100%;
+    }
+    
+    .memojisTextContent{
+        width: 70%;
+        height: 100%;
+    }
+
+    .memojis img{
+        width: 120px;
+        height: 120px;
+    }
+
+    .profilePic img{
+        width: 45px;
+        height: 45px;
+    }
+
+
+
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+
+    .memojis {
+        height: 100%;
+    }
+
+    .memojisTextContainer{
+        height: 90%;
+
+    }
+
+    .memojisTextContent{
+        width: 90%;
+        height: 80%;
+    }
+
+    .memojis img{
+        width: 100px;
+        height: 100px;
+    }
+
+    .profilePic img{
+        width: 35px;
+        height: 35px;
+    }
+
+  
+}
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+    .memojis {
+        width: 100%;
+    }
+
 }
