--- a/styles/projectw/otherprojects.css
+++ b/styles/projectw/otherprojects.css
@@ -4,6 +4,7 @@
     justify-content: center;
     width: 100%;
     height: 100vh;
+    background-color: red;
 }
 
 .otherProjects p {
@@ -22,6 +23,7 @@
 .otherRecentProjects {
     width: 76.39%;
     height: 76.92%;
+    background-color: blue;
 }
 
 .otherProjectRow {
@@ -29,6 +31,7 @@
     flex-direction: row;
     justify-content: space-around;
     gap: 5%;
+    background-color: green;
 }
 
 .otherProjectRow img{
@@ -39,7 +42,59 @@
 .otherProjectColumn {
     background-color: white;
     width: 30%;
+    background-color: yellow;
 }
 
+
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+    
+    .otherProjects {
+        height: 100vh;
+    }
+    
+    .otherRecentProjects {
+        width: 100%;
+    }
+    
+    .otherProjectRow {
+        height: 70%;
+    }
+
+    
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+  
+    .otherProjects {
+        height: 240vh;
+    }
+
+    .otherRecentProjects {
+        height: 90%;
+    }
+    
+    .otherProjectRow {
+        height: 90%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .otherProjectColumn {
+        height: 50%;
+        width: 70%;
+        justify-content: center;
+    }
+}
+
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+     
+    .otherProjectColumn {
+        height: 50%;
+        width: 80%;
+        justify-content: center;
+    }
+}
 
 
