--- a/styles/projectw/simplify.css
+++ b/styles/projectw/simplify.css
@@ -69,3 +69,18 @@
     font-size: 20px;
     line-height: 30px;
 }
+
+
+
+
+@media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
+  
+}
+
+@media (max-width: 830.98px) { /*smartphone horizontal*/
+  
+}
+
+@media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
+     
+}
