--- a/styles/contact/contacto.css
+++ b/styles/contact/contacto.css
@@ -3,17 +3,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1440px;
-    height: 830px;
+    justify-content: space-between;
+    width: 100%;
+    height: 100vh;
 }
 
 .contactUs {
-    width: 1100px;
+    width: 76.39%;
 }
 
 .formulario  {
-    width: 1100px;
-    height: 660px;
+    width: 76.39%;    
+    height: 80%;
     color: #6B708D;
 }
 
@@ -21,7 +22,6 @@
     font-size: 20px;
     line-height: 30px;
     height: 30px;
-
 }
 
 .formulario input {
@@ -66,13 +66,13 @@
 }
 
 .botonFinal {
-    margin-left: 170px;
     background: #072AC8;
     color: white;
     height: 80px;
     border: none;
-    width: 1104px;
+    width: 76.39%;
 }
+
 
 
 @media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
@@ -81,8 +81,20 @@
 
 @media (max-width: 830.98px) { /*smartphone horizontal*/
   
+    .contacto {
+        margin-top: 100px;
+        height: 115vh;
+    }
+
+    
+    .formMailPhone {
+        flex-direction: column;
+    }
+
 }
 
 @media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
-     
+    .contactUs {
+        text-align: center;
+    }
 }
