--- a/styles/index/services.css
+++ b/styles/index/services.css
@@ -59,6 +59,7 @@
     word-wrap: break-word;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .servicesColumn > a, p, h4 {
@@ -71,13 +72,48 @@
 
 @media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
   
+    .services {
+        height: 100vh;
+    }
+    
+    .ourServices {
+        width: 90%;
+    }
+    
+    .servicesRow {
+        height: 70%;
+    }
 }
+
+
 
 @media (max-width: 830.98px) { /*smartphone horizontal*/
   
+    .services {
+        height: 340vh;
+    }
+
+    
+    .servicesRow {
+        height: 90%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: start;
+    }
+
+    .servicesColumn {
+        height: 50%;
+        width: 70%;
+    }
+
 }
 
 @media (min-width: 370px) and (max-width: 570px) { /*smartphone vertical*/
      
+    .servicesColumn {
+        height: 50%;
+        width: 80%;
+    }
+
 }
 
