--- a/styles/contact/contacto.css
+++ b/styles/contact/contacto.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 100vh;
+    height: 130vh;
 }
 
 .contactUs {
@@ -83,12 +83,19 @@
   
     .contacto {
         margin-top: 100px;
-        height: 115vh;
+        height: 140vh;
     }
 
-    
+    .fila {
+        margin-top: 20px;
+    }
+
     .formMailPhone {
         flex-direction: column;
+    }
+
+    .formMessage input {
+        height: 180px;
     }
 
 }
