--- a/styles/index/client.css
+++ b/styles/index/client.css
@@ -2,7 +2,12 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-top: 200px;
+    margin-top: 100px;
+}
+
+.client img{
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
 }
 
 .clientLogos {
