--- a/styles/index/landing.css
+++ b/styles/index/landing.css
@@ -28,7 +28,6 @@
     color: #6B708D;
     width: 435px;
     padding-left: 0px;
-    
 }
 
 .landingLeftBoton {
@@ -56,31 +55,32 @@
 .landingRight {
     width: 50%;
     height: 650px;
-    position: relative;
 }
 
 .landingRightFotoGrande {
     background-image: url("/project-assets/hero-section/hero-image.png");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 90%;
     width: 100%;
+    position: relative;
 }
 
 
-
-.img1 img{
-    position: absolute;
+.landingRightFotoGrande img{
     height: 296px;
-    left: 0%;
+}
+
+.img1{
+    position: absolute;
+    left: -10%;
     top: 0%;
 }
 
-.img2 img{
-    height: 296px;
+.img2{
     position: absolute;
     bottom: -10%;
-    right: 0%;
+    right: -10%;
 }
 
 
@@ -114,13 +114,18 @@
         width: 50%;
     }
 
-    .img1 img{
-        height: 256px;
+    .landingRightFotoGrande img{
+        height: 246px;
     }
     
-    .img2 img{
-        height: 256px;
+    .img1{
+        left: 0%;
     }
+    
+    .img2{
+        right: 10%;
+    }
+
 }
 
 @media (max-width: 830.98px) { /*smartphone horizontal*/
@@ -134,7 +139,7 @@
         justify-content: start;
         gap: 30px;
         width: 98%;
-        height: 90%;
+        height: 100%;
     }
 
     .landingLeft {
@@ -142,18 +147,28 @@
     }
 
     .landingRight{
-        width: 70%;
-        height: 40%;
+        width: 80%;
+        height: 35%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
-    .img1 img{
-        height: 196px;
+    .landingRightFotoGrande img{
+        height: 156px;
+    }
+
+    .landingRightFotoGrande{
+        width: 60%;
+    }
+
+    .img1{
+        left: -5%;
     }
     
-    .img2 img{
-        height: 196px;
-        bottom: -10%;
+    .img2{
         right: 10%;
+        bottom: -20%;
     }
 
 }
@@ -164,9 +179,25 @@
         word-break:break-all;
     }
 
+    .landing h1{
+        font-size: 40px;
+    }
+
     .landingRight{
         width: 90%;
     }
 
+    .landingRightFotoGrande img{
+        height: 126px;
+    }
+
+    .img1{
+        left: -5%;
+    }
+    
+    .img2{
+        right: 10%;
+        bottom: -5%;
+    }
 
 }
