--- a/styles/index.css
+++ b/styles/index.css
@@ -1,17 +1,17 @@
-@import url("/styles/comun/footer.css");
-@import url("/styles/comun/navbar.css");
-@import url("/styles/comun/newsletter.css");
+@import url("./comun/footer.css");
+@import url("./comun/navbar.css");
+@import url("./comun/newsletter.css");
 
-@import url("/styles/contact/contacto.css");
+@import url("./contact/contacto.css");
 
-@import url("/styles/index/client.css");
-@import url("/styles/index/landing.css");
-@import url("/styles/index/projects.css");
-@import url("/styles/index/services.css");
-@import url("/styles/index/testimonial.css");
+@import url("./index/client.css");
+@import url("./index/landing.css");
+@import url("./index/projects.css");
+@import url("./index/services.css");
+@import url("./index/testimonial.css");
 
-@import url("/styles/projectw/otherprojects.css");
-@import url("/styles/projectw/simplify.css");
+@import url("./projectw/otherprojects.css");
+@import url("./projectw/simplify.css");
 
 
 h1 {
