--- a/styles/index/landing.css
+++ b/styles/index/landing.css
@@ -1,4 +1,3 @@
-
 .landing {
     margin-top: 100px;
     height: 100vh;
@@ -58,7 +57,7 @@
 }
 
 .landingRightFotoGrande {
-    background-image: url("/project-assets/hero-section/hero-image.png");
+    background-image: url("../../project-assets/hero-section/hero-image.png");
     background-size: contain;
     background-repeat: no-repeat;
     height: 90%;
