--- a/styles/comun/navbar.css
+++ b/styles/comun/navbar.css
@@ -1,62 +1,8 @@
-/* nav {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
 
-nav a{
-    color: #6B708D;
-}
-
-.navContainer {
-    margin-top: 70px;
-    width: 76.39%;
-    padding: 20px;
-    height: 52px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navLeft img{
-    height: 18.5px;
-    width: 60.5px;
-}
-
-.navMiddle{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    gap: 60px;
-    width: 33%;
-}
-
-.navLeft {
-    width: 33%;
-}
-
-.navRight {
-    width: 33%;
-    display: flex;
-    justify-content: right;
-}
-
-
-.navRight button{
-    background: #072AC8;
-    width: 150px;
-    height: 52px;
-    border: none;
-}
-
-.navRight a{
-    color: white !important;
-} */
 header {
     position: fixed;
     z-index: 100;
-    margin-top: -100px;
+    margin-top: -200px;
     width: 100%;
     height: 100px;
     display: flex;
@@ -81,6 +27,7 @@ header {
     display: flex;
     list-style: none;
     gap: 20%;
+
 }
 
 .menu_items li a{
@@ -134,15 +81,14 @@ ul.show {
     .menu_items{
     margin-left: 450px;
     position: fixed;
-    width: 100%;
+    width: 80%;
     height: 15%;
     top: -100vh;
-    text-align: right;
+    text-align: left;
     transition: all .4s;
     flex-direction: column;
     gap: 0px;
-    background-color: #ECF7FF;
-
+    background-color: #C8C8C8;
     }
 
     .botonContacto {
@@ -180,14 +126,14 @@ ul.show {
     .menu_items{
     margin-left: 450px;
     position: fixed;
-    width: 100%;
+    width: 80%;
     height: 15%;
     top: -100vh;
-    text-align: right;
+    text-align: left;
     transition: all .4s;
     flex-direction: column;
-    background-color: #ECF7FF;
     gap: 0px;
+    background-color: #C8C8C8;
     }
 
     .botonContacto {
@@ -203,17 +149,9 @@ ul.show {
     line-height: 30px;
     }
 
-    .menu_items li:hover {
-    background-color: none;
-    }
-
     .menu_items li a{
     font-size: 20px;
     font-weight: bold;
-    }
-
-    .menu_items li a:hover{
-    color: red;
     }
    
 }
