--- a/styles/contact/contacto.css
+++ b/styles/contact/contacto.css
@@ -36,6 +36,9 @@ textarea {
     width: 100%;
     background-color: rgba(107, 112, 141, 0.1);
     border: none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #6B708D;
+    font-size: 17px;
 }
 
 /*padding solo para el placeholder*/
@@ -67,31 +70,27 @@ textarea {
 }
 
 .formMessage input {
-    height: 200px;
     text-align: start;
 }
 
 .botonFinal {
     background: #072AC8;
     color: white;
-    height: 80px;
     border: none;
     width: 100%;
-    margin-top: 15%;
 }
 
 
 
+
 @media (min-width: 831px) and (max-width: 1100px) { /*tablet vertical*/
-    .botonFinal {
-        margin-top: 20%;
-    }
+
+
 }
 
 @media (max-width: 830.98px) { /*smartphone horizontal*/
   
     .contacto {
-        margin-top: 100px;
         height: 140vh;
     }
 
@@ -103,12 +102,8 @@ textarea {
         flex-direction: column;
     }
 
-    .formMessage input {
-        height: 180px;
-    }
-
     .botonFinal {
-        margin-top: 25%;
+        margin-top: 10%;
     }
 
 }
@@ -119,6 +114,6 @@ textarea {
     }
 
     .botonFinal {
-        margin-top: 30%;
+        margin-top: 15%;
     }
 }
