--- a/styles/contact/contacto.css
+++ b/styles/contact/contacto.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 130vh;
+    height: 140vh;
 }
 
 .contactUs {
@@ -39,6 +39,7 @@ textarea {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #6B708D;
     font-size: 17px;
+    padding-top: 10px;
 }
 
 /*padding solo para el placeholder*/
@@ -65,9 +66,9 @@ textarea {
     gap: 5%;
 }
 
-.formMailPhone input {
+/* .formMailPhone input {
     gap: 20%;
-}
+} */
 
 .formMessage input {
     text-align: start;
