--- a/styles/index.css
+++ b/styles/index.css
@@ -20,6 +20,7 @@ h1 {
     line-height: 70px;
     padding-left: 0px;
     margin-left: 0px;
+    transition: 1s;
 }
 
 h3 {
@@ -28,6 +29,8 @@ h3 {
     line-height: 46px;
     padding-left: 0px;
     margin-left: 0px;
+    transition: 1s;
+
 }
 
 
@@ -37,6 +40,8 @@ h4 {
     font-size: 24px;
     line-height: 28px;
     padding-left: 20px;
+    transition: 1s;
+
 }
 
 p {
@@ -53,8 +58,110 @@ body{
     background-color: #ECF7FF;
     margin: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    transition: 1s;
 }
+
+body.dark{
+    background-color:  #25221b;
+    transition: 1s;
+}
+
+body.dark h1, h3{
+    color: #FFC600;
+    transition: 1s;
+}
+
+
+body.dark .formulario input{
+    background-color: rgba(211, 211, 211, 0.303);
+    color: lightgray;
+    transition: 1s;
+}
+
+body.dark .formulario textarea{
+    background-color: rgba(211, 211, 211, 0.303);
+    color: lightgray;
+    transition: 1s;
+}
+
+body.dark .headerNew{
+    background-color: #25221b;
+    transition: 1s;
+}
+
+body.dark .projectColumn{
+    background-color: #25221b;
+    border: solid 1px lightgray;
+    transition: 1s;
+}
+
+body.dark .projectColumn h4{
+    color: #FFC600;
+    transition: 1s;
+}
+
+body.dark .servicesColumn{
+    background-color: #25221b;
+    border: solid 1px lightgray;
+    transition: 1s;
+}
+
+body.dark .servicesColumn h4{
+    color: #FFC600;
+    transition: 1s;
+}
+
+body.dark .servicesRow .fondo {
+    background-color: #124d777b; 
+    transition: 1s;  
+      
+}
+
+body.dark .otherProjectColumn{
+    background-color: #25221b;
+    border: solid 1px lightgray;
+    transition: 1s;
+}
+
+body.dark .otherProjectColumn h4{
+    color: #FFC600;
+    transition: 1s;
+}
+
+body.dark .simplify span{
+    color: #FFC600;
+    transition: 1s;
+}
+
+
+
+body.dark .client img{
+    -webkit-filter: none;
+    filter: none;
+}
+
+body.dark button{
+    background-color: rgb(8, 8, 117);
+    transition: 1s;
+}
+
+body.dark .landingLeft button{
+    background-color: rgb(8, 8, 117);
+    transition: 1s;
+}
+
+/* body.dark .menu_items{
+    background-color: #6B708D;
+     
+}
+
+body.dark .menu_items li a{
+    color: #C8C8C8;;    
+} */
+
+
 
 body a{
     text-decoration: none;
+
 }
