--- a/styles/comun/navbar.css
+++ b/styles/comun/navbar.css
@@ -28,7 +28,6 @@
     display: flex;
     list-style: none;
     gap: 20%;
-
 }
 
 .menu_items li a{
@@ -51,11 +50,17 @@
     color: blue;
     cursor: pointer;
     display: none;
+    padding: 20px;
+}
+
+.btn_menu.show {
+    background-color: #C8C8C8;
+    transition: 1s;
 }
 
 ul.show {
     top:65px;
-    right: 10%;
+    right: 0%;
 }
 
 .botonContacto {
@@ -74,7 +79,7 @@ ul.show {
 }
 
 .darkModeSwitch{
-    background: #3494b1;
+    background: #072AC8;
     display:flex;
     position: relative;
     cursor: pointer;
@@ -100,17 +105,17 @@ ul.show {
     width: 2.4rem;
     height: 2.4rem;
     position: absolute;
-    top:0;
-    left:0;
+    top: -1px;
+    left: 0;
     right:unset;
     border-radius: 3rem;
     transition: all .5s ease;
     box-shadow: 0 0 2px 2px rgba(0, 0, 0, .5);
-    content: "";
+    content: ""; /*para que aparezca el fondo circular blanco*/
 }
 
 .darkModeSwitch.active{
-    background: #fdd384;
+    background: #ffad14;
 }
   .darkModeSwitch.active::after{
     left:unset;
@@ -123,27 +128,43 @@ ul.show {
     .btn_menu {
         display: inline-flex;
     }
+
+    .menu{
+        width: 100%;
+    }
     
     .menu_items{
     margin-left: 450px;
     position: fixed;
-    width: 80%;
-    height: 20%;
+    width: 100%;
+    height: fit-content;
     top: -100vh;
     text-align: left;
     transition: all .4s;
     flex-direction: column;
-    gap: 0px;
+    justify-content: space-between;
+    gap: 10px;
     background-color: #C8C8C8;
+    }
+
+    body.dark .btn_menu.show {
+        background-color: #6B708D;
+        transition: 1s;
     }
 
     body.dark .menu_items{
         background-color: #6B708D;
-         
+        transition: 1s;
+    }
+
+    body.dark .fa{
+        color: #ffad14;
+        transition: 1s;
     }
     
     body.dark .menu_items li a{
-        color: #C8C8C8;;    
+        color: #C8C8C8;;  
+        transition: 1s;  
     }
 
     .botonContacto {
@@ -170,30 +191,42 @@ ul.show {
 }
 
 @media (max-width: 830.98px) { /*smartphone horizontal*/
+    
     .btn_menu {
         display: inline-flex;
+    }
+
+    .menu{
+        width: 100%;
     }
     
     .menu_items{
     margin-left: 450px;
     position: fixed;
-    width: 80%;
-    height: 20%;
+    width: 100%;
+    height: fit-content;
     top: -100vh;
     text-align: left;
     transition: all .4s;
     flex-direction: column;
-    gap: 0px;
+    justify-content: space-between;
+    gap: 10px;
     background-color: #C8C8C8;
+    }
+
+    body.dark .btn_menu {
+        background-color: #6B708D;
+        transition: 1s;
     }
 
     body.dark .menu_items{
         background-color: #6B708D;
-         
+        transition: 1s;
     }
     
     body.dark .menu_items li a{
-        color: #C8C8C8;;    
+        color: #C8C8C8;;  
+        transition: 1s;  
     }
 
     .botonContacto {
@@ -207,6 +240,10 @@ ul.show {
     .menu_items li {
     margin: 30px, 0 0 0;
     line-height: 30px;
+    }
+
+    .menu_items li:hover {
+    background-color: none;
     }
 
     .menu_items li a{
