--- a/styles/index/testimonial.css
+++ b/styles/index/testimonial.css
@@ -17,6 +17,42 @@
     align-items: center;
 }
 
+.circle1 {
+    border: 2px #353b5a solid; 
+    border-style: dashed;
+    width: 40%;
+    height: 40%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
+.circle2 {
+    border: 2px #353b5a solid;     
+    border-style: dashed;
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
+.circle3 {
+    border: 2px #353b5a;     
+    border-style: dashed;
+    width: 99%;
+    height: 99%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+}
+
 .memojis {
     display: flex;
     justify-content: center;
